@@ -1,3 +1,6 @@
+  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.2.1.ebuild:
+  dev-vcs/gitlab-shell:  removed obsolete version 3.2.1
+
 *gitlab-shell-3.6.0 (23 Sep 2016)
 
   23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.0.ebuild:
